2008-12-03  Dan Winship  <danw@gnome.org>

	* libsoup/soup-proxy-resolver-gconf.c (finalize): disconnect from
	gconf notifications. Fixes a crash, #563145.

2008-12-01  Dan Winship  <danw@gnome.org>

	* configure.in: 2.25.2

	* NEWS: update

2008-11-28  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth-manager.c (auth_type_compare_func): Fix this
	so we choose the *strongest* auth type first, rather than the
	weakest. Doh. #562339, Pontus Oldberg.

	* libsoup/soup-server.c (soup_server_add_auth_domain): use
	g_slist_append() rather than prepend(), so auth headers get added
	in the same order as the SoupAuthDomains were.

	* tests/auth-test.c (do_select_auth_test): add a test of selecting
	between Basic and Digest auth

2008-11-28  Dan Winship  <danw@gnome.org>

	* libsoup/Makefile.am (libsoupgnomeincludedir): make this
	$(includedir)/libsoup-gnome-2.4/libsoup rather than being the same
	as $(libsoupincludedir). Makes it easier to split into two
	packages.

2008-11-28  Dan Winship  <danw@gnome.org>

	* docs/reference/client-howto.xml: fix method name in example.
	#562411, Andreas Bruse.

2008-11-24  Dan Winship  <danw@gnome.org>

	* libsoup/soup-logger.c: clarify exactly when stuff gets logged
	(and in particular, that SoupSession::authenticate gets emitted
	before the response it is authenticating gets logged).

2008-11-06  Dan Winship  <danw@gnome.org>

	* libsoup/Makefile.am (libsoup_gnome_2_4_la_LIBADD): fix linking
	with --as-needed. #559342, pointed out by Götz Waschk

2008-11-04  Dan Winship  <danw@gnome.org>

	* configure.in: 2.25.1

	* NEWS: update

2008-11-04  Dan Winship  <danw@gnome.org>

	* libsoup/soup-address.c (soup_address_is_resolved):
	* libsoup/soup-cookie.c (soup_cookie_copy):
	* libsoup/soup-cookie-jar.c (soup_cookie_jar_class_init):
	* libsoup/soup-message-headers.c (SoupMessageHeadersType):
	* libsoup/soup-proxy-resolver.c
	(soup_proxy_resolver_get_proxy_async)
	(soup_proxy_resolver_get_proxy_sync):